--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
     content="Homebridge is a lightweight NodeJS server you can run on your home network that emulates the iOS HomeKit API.">
   <meta name="description"
     content="Homebridge is a lightweight NodeJS server you can run on your home network that emulates the iOS HomeKit API.">
+
+  <link rel="stylesheet" href="https://use.typekit.net/tqg0jcu.css">
 </head>
 
 <body>
