update website description

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,8 @@
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://homebridge.io">
   <meta property="og:description"
-    content="Homebridge is a lightweight NodeJS server you can run on your home network that emulates the iOS HomeKit API.">
-  <meta name="description"
-    content="Homebridge is a lightweight NodeJS server you can run on your home network that emulates the iOS HomeKit API.">
+    content="Homebridge adds HomeKit support to your smart home devices without native support.">
+  <meta name="description" content="Homebridge adds HomeKit support to your smart home devices without native support.">
 
   <link rel="stylesheet" href="https://use.typekit.net/tqg0jcu.css">
 </head>
