--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,8 @@
   <meta property="og:title" content="Homebridge">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://homebridge.io">
-  <meta property="og:description"
-    content="Homebridge adds HomeKit support to your smart home devices without native support.">
-  <meta name="description" content="Homebridge adds HomeKit support to your smart home devices without native support.">
+  <meta property="og:description" content="Homebridge adds HomeKit support to your non-HomeKit smart home devices.">
+  <meta name="description" content="Homebridge adds HomeKit support to your non-HomeKit smart home devices.">
 
   <link rel="stylesheet" href="https://use.typekit.net/tqg0jcu.css">
 </head>
