--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,16 @@
   <meta name="description" content="Homebridge adds HomeKit support to your non-HomeKit smart home devices.">
 
   <link rel="stylesheet" href="https://use.typekit.net/tqg0jcu.css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <meta name="google-site-verification" content="1_86Bp6e3u8Rrt5eN2e6NqRpSLJ52bIYO37LvNLxgZk" />
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165871119-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'UA-165871119-2');
+  </script>
 </head>
 
 <body>
