--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>Homebridge</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
   <link rel="apple-touch-icon" sizes="180x180" href="assets/images/apple-touch-icon.png">
